# RCCWeb3Tutorial

./: RCCWeb3Tutorial.code-workspace
Code/golang/go-demo1/: go.mod  main.go
Code/golang/go-demo2/: Store.sol  abigenDeploy.go  ethereumDeploy.go  eventQuery.go  eventSubscribe.go  execAbigenContract.go  execEthclientContract.go  execOrigialContract.go  generateKey.go  go.mod  loadContract.go  main.go  queryBalance.go  queryRecipt.go  queryTransaction.go  sendToken.go  sendTransaction.go  subscribeBlock.go  test.go
Code/rust/rust-demo1/: Cargo.toml
Code/rust/rust-demo2/: Anchor.toml
Code/rust/rust-demo2/programs/rust-demo2/: Cargo.toml
Code/rust/rust-demo2/programs/rust-demo2/src/: lib.rs
Code/solidity/solidity-demo1/: package.json
Code/solidity/solidity-demo2/: .gitignore  config.js  hardhat.config.js  package.json  pnpm-lock.yaml
Code/solidity/solidity-demo3/: .gitignore  hardhat.config.js  package.json  pnpm-lock.yaml
Code/solidity/solidity-demo4/: hardhat.config.js  package.json  pnpm-lock.yaml
Level1/task5/: Bank.sol  Todo.sol  Transfer.sol  WETH.sol
Level3/task1/: requirement.md  task.md
Level3/task1/rcc-stake-contract/: .gitignore  Task.md  hardhat.config.js  package.json  pnpm-lock.yaml
Level4/task1/lsjv-nft-market-bakcend/: go.mod  go.sum
Level4/task3/: README.MD
ProjectsTask/EasySwapContract/: package.json  pnpm-lock.yaml
ProjectsTask/EasySwapContract/contracts/: OrderStorage.sol
ProjectsTask/EasySwapContract/test/: TestEasySwap.js
ProjectsTask/nft-market-fe/: next.config.ts
RemoteCodeCamp/golang-v2/: README.md
(+69 files in other folders)
