[package]
name = "rust-demo2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rust_demo2"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# anchor-lang = "0.30.1"
# ark-bn254 = { version = "0.4", features = ["full"] }
# anchor-lang = "0.31.0"
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
# futures = "0.3.31"
# anchor-lang = { version = "0.31.0", default-features = true, features = [
#     "init-if-needed",
# ] }
